# orkit-crew

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DOCKER.md  GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION.md
issues/: 1.md  2026-03-07-PRD-to-Product-Pipeline.md
scripts/: docker-entrypoint.sh  setup.sh
src/: __init__.py
src/core/: __init__.py  api_keys.py  auth.py  config.py  conversation_state.py  exceptions.py  memory.py  memory_exceptions.py  output.py  router.py  state_machine.py  task_state.py  users.py
src/core/output_handlers/: __init__.py  base.py  console.py  file.py  http.py
src/crews/: __init__.py  base.py  chat_crew.py
src/gateway/: __init__.py  cli.py  planno_client.py  routes.py  server.py  websocket.py
src/orkit_crew/: __init__.py  cli.py  main.py
src/orkit_crew/agents/: __init__.py  analyst.py  architect.py  base.py  generator.py
src/orkit_crew/core/: __init__.py  config.py  memory.py  prd_parser.py  router.py  session.py  state.py
src/orkit_crew/crews/: __init__.py  base.py  coding_crew.py  planning_crew.py
src/orkit_crew/gateway/: __init__.py  llm_client.py  plano_client.py
src/orkit_crew/pipeline/: orchestrator.py
src/orkit_crew/templates/: prd_template.md
src/orkit_crew/tools/: __init__.py
tests/: conftest.py  test_analyst.py  test_architect.py  test_config.py  test_gateway.py  test_pipeline.py  test_prd_parser.py  test_router.py  test_session.py
tests/fixtures/: prd_extend.md  prd_full.md  prd_medium.md  prd_minimal.md
